Fix signature font size on mobile view

--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ article {
       display: inline;
       width: 1;
       font-family: "Akaya Telivigala", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      font-size: 9px;
+      font-size: 12px;
       font-weight: bold;
     }
 
